# yaka-learn-mcp

./: .gitignore  README.md  README.zh.md  pyproject.toml
docs/: SSE_TUTORIAL.md  SSE教程.md
src/english_kids_mcp/: __init__.py  config.py  curriculum.json  curriculum.py  db.py  evaluation.py  references.py  schemas.py  server.py  srs.py  sse_server.py  vectorstore.py
src/english_kids_mcp/references/5-6/greetings/: words.txt
src/english_kids_mcp/references/7-8/daily-life/: words.txt
src/english_kids_mcp/references/9-10/daily-life/: words.txt
tests/: test_chat_flow.py  test_sse_client.py
